--- a/src/content/posts/002.md
+++ b/src/content/posts/002.md
@@ -1,11 +1,10 @@
 ---
-layout: '../../layouts/MarkdownPostLayout.astro'
 title: 'Tailwind CSS 初探'
 date: 2024-09-05
 keywords: 'tailwind css, css框架, prefilght'
 description: 'Tailwind CSS 一个精简、实用、高度可定制的css框架'
 author: 'luludev.cn'
-tags: ['css','tailwind']
+tags: ['css']
 coverImage: "/images/file.svg"
 ---
 
