--- a/src/content/posts/003.md
+++ b/src/content/posts/003.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 关于Date的使用方法和常见问题
 author: 'luludev.cn'
 keywords: 'Date, new Date, UTC, timezone'
@@ -7,8 +6,7 @@ description: "JavaScript中关于Date的强大的内置方法和第三方库"
 date: 2022-10-03
 coverImage: "/images/file.svg"
 tags:
-  - "javascript"
-  - "date"
+  - "Javascript"
 ---
 
 
