--- a/src/content/posts/007.md
+++ b/src/content/posts/007.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'NodeJS开发 -- 第一个应用程序'
 author: 'luludev.cn'
 keywords: 'NodeJS, http'
@@ -7,7 +6,7 @@ description: "NodeJS开发，安装指南，常用工具，nvm, npm, yarn, pnpm"
 date: 2024-09-20
 coverImage: "/images/file.svg"
 tags:
-  - "nodejs"
+  - "NodeJS"
 ---
 
 ## 安装
