--- a/src/content/posts/008.md
+++ b/src/content/posts/008.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'NodeJS开发 -- npm的使用'
 author: 'luludev.cn'
 keywords: 'NodeJS, npm, 包管理器'
@@ -7,8 +6,7 @@ description: "NodeJS开发，安装指南，常用工具，NPM的全称是Node P
 date: 2024-09-20
 coverImage: "/images/file.svg"
 tags:
-  - "npm"
-  - "nodejs"
+  - "NodeJS"
 ---
 
 
