--- a/src/content/posts/010.md
+++ b/src/content/posts/010.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'NodeJS开发 -- pnpm的使用'
 author: 'luludev.cn'
 keywords: 'NodeJS, npm, pnpm, yarn'
@@ -7,11 +6,9 @@ description: "NodeJS开发，安装指南，常用工具pnpm，更高效的npm"
 date: 2024-09-22
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "NodeJS"
 ---
 
-import CodeBlock from '../../components/CodeBlock.astro';
 
 pnpm是performant npm的简称，比npm具有更高的性能，它通过链接和缓存的方式，解决了npm中的幽灵依赖的问题，它具有安装速度快，占用空间小的特点。
 
