--- a/src/content/posts/013.md
+++ b/src/content/posts/013.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: '国庆自驾河北阿那亚小镇'
 author: 'luludev.cn'
 keywords: '国庆出游，自驾，阿那亚，北戴河'
@@ -7,14 +6,12 @@ description: "国庆带着家人自驾河北秦皇岛阿那亚文创小镇"
 date: 2024-10-07
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "闲散"
 ---
 
-import {Image} from 'astro:assets';
-import lcoalImage1 from '../../../public/haibian.png';
+<!-- import lcoalImage1 from '../../../public/haibian.png';
 import lcoalImage2 from '../../../public/juchang.png';
-import lcoalImage3 from '../../../public/litang.png';
+import lcoalImage3 from '../../../public/litang.png'; -->
 
 2024，国庆节期间，带着家人驱车自驾4.5个小时抵达位于河北秦皇岛的阿那亚旅游度假区。
 
