--- a/src/content/posts/015.md
+++ b/src/content/posts/015.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'NodeJS开发 -- fs文件系统的使用'
 author: 'luludev.cn'
 keywords: 'NodeJS, fs文件系统, stream'
@@ -7,8 +6,7 @@ description: "NodeJS开发，fs文件系统的常见使用方法"
 date: 2024-10-22
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "NodeJS"
 ---
 
 
