--- a/src/content/posts/021.md
+++ b/src/content/posts/021.md
@@ -1,14 +1,12 @@
 ---
 description: '在 React 中，组件生命周期是指组件从创建到销毁的完整过程。React 类组件和函数组件（使用 useEffect 等 Hook）具有不同的生命周期管理方式。以下主要介绍类组件生命周期的不同阶段。'
-layout: '../../layouts/MarkdownPostLayout.astro'
 title: 'React 生命周期'
 author: 'luludev.cn'
 keywords: 'react, jsx, tsx, component'
 date: 2024-11-01
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "React"
 ---
 
 ## React 生命周期
