--- a/src/content/posts/023.md
+++ b/src/content/posts/023.md
@@ -2,13 +2,11 @@
 title: React 组件通信
 keywords: react, jsx, tsx, component
 description: 在 React 中，组件通信是指在父组件和子组件之间传递数据。React 单向数据流的特点决定了数据只能从父组件传递到子组件，而不能直接从子组件传递给父组件。这种数据传递主要通过 props 实现。
-layout: ../../layouts/MarkdownPostLayout.astro
 author: 'luludev.cn'
 date: 2024-11-03
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "React"
 ---
 
 ## React 中的 Props 与组件通信
