--- a/src/content/posts/025.md
+++ b/src/content/posts/025.md
@@ -1,15 +1,14 @@
 ---
 title: Javascript 比较两个Object
 description: 在JavaScript中，用来比较两个对象的是否相同，通常会用到instanceOf， object.keys, object.entires, 和第三方库比如loadash.
-layout: ../../layouts/MarkdownPostLayout.astro
 author: 'luludev.cn'
 keywords: 'Javascript, keys, entries, loadash, instanceOf'
 date: 2024-11-09
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "Javascript"
 ---
+
 ## 1. 在 JavaScript 中，`instanceof` 是一个运算符，用于检查一个对象是否是某个构造函数的实例。它的主要用途是判断对象的原型链中是否存在指定构造函数的 `prototype`。
 
 ### 基本语法
