--- a/src/content/posts/028.md
+++ b/src/content/posts/028.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'React Hook 详细介绍'
 author: 'luludev.cn'
 keywords: 'react, hooks, useState, use, component'
@@ -7,8 +6,8 @@ description: "React Hooks 是 React 16.8 引入的一种特性，它让函数组
 date: 2024-11-29
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "React"
+  - "React Hook"
 ---
 
 ### **React Hook 详细介绍**
