--- a/src/content/posts/030.md
+++ b/src/content/posts/030.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'JavaScript单元测试之Mocha详细介绍'
 author: 'luludev.cn'
 keywords: 'Mocha, Node, javascript, unit test, Mock'
@@ -7,8 +6,8 @@ description: "Mocha 是一个功能强大的 JavaScript 测试框架，适用于
 date: 2024-12-02
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "Javascript"
+  - "Mocha"
 ---
 
 
