--- a/src/content/posts/031.md
+++ b/src/content/posts/031.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'JavaScript单元测试之Jest详细介绍'
 author: 'luludev.cn'
 keywords: 'react, Jest, javascript, unit test, Facebook'
@@ -8,8 +7,8 @@ description: "Jest 是 Facebook 开发的强大 JavaScript 测试框架，广泛
 date: 2024-12-03
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "JavaScript"
+  - "Jest"
 ---
 
 
