--- a/src/content/posts/016.md
+++ b/src/content/posts/016.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'NodeJS开发 -- Stream流的使用'
 author: 'luludev.cn'
 keywords: 'NodeJS, fs文件系统, stream'
@@ -7,12 +6,20 @@ description: "Stream是Nodejs一种高效的文件处理操作，它允许我们
 date: 2024-10-23
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "NodeJS"
 ---
 
-import CodeBlock from '../../components/CodeBlock.astro';
-export const readableStream = `const fs = require('fs');
+
+Stream是Nodejs一种高效的文件处理操作，它允许我们可以以流的方式读写数据，无需一次性将所有数据加载到内存中，可以分块处理，从而大大提高服务效率，对于大文件和数据流尤其显著。
+
+NodeJS中的stream流主要分为四种类型：**Readable 可读流**、 **Writable 可写流**、 **Duplex 可读可写双工流**、 **Transform 可读可写转化流**.
+
+### 读取文件流
+
+createReadStream是用来创建一个读取文件流，监听data, end, error事件，可以实现对文件读取的操作
+
+```js
+const fs = require('fs');
 
 const readStream = fs.createReadStream("./file.txt", "utf-8");
 
@@ -27,9 +34,14 @@ readStream.on("end", () => {
 readStream.on("error", (err) => {
     console.log(read err);
 })
-`
+```
 
-export const writableStream = `const fs = require('fs');
+### 写入文件流
+
+createWriteStream是用来创建一个写入文件流，具有write，end等操作
+
+```js
+const fs = require('fs');
 
 const writeStream = fs.createWriteStream("./file.txt", "utf-8");
 
@@ -43,26 +55,8 @@ writeStream.end();
 
 writeStream.on('error', (err) => {
   console.error('写入流发生错误:', err);
-});`
-
-export const pippStream = `a.pipe(b).pipe(c).pipe(d)`
-
-
-Stream是Nodejs一种高效的文件处理操作，它允许我们可以以流的方式读写数据，无需一次性将所有数据加载到内存中，可以分块处理，从而大大提高服务效率，对于大文件和数据流尤其显著。
-
-NodeJS中的stream流主要分为四种类型：**Readable 可读流**、 **Writable 可写流**、 **Duplex 可读可写双工流**、 **Transform 可读可写转化流**.
-
-### 读取文件流
-
-createReadStream是用来创建一个读取文件流，监听data, end, error事件，可以实现对文件读取的操作
-
-<CodeBlock lang={'ts'} code={readableStream}></CodeBlock>
-
-### 写入文件流
-
-createWriteStream是用来创建一个写入文件流，具有write，end等操作
-
-<CodeBlock lang={'ts'} code={writableStream}></CodeBlock>
+});
+```
 
 
 ### 可读可写双工流
@@ -84,5 +78,7 @@ Transform 也是一种Duplex 流，但是它的输入输出是关联的，比如
 
 Pipe 是让流运动起来的管道，它可以将一个可读流传输到另一个可写里流里，让多个流用管道联通起来
 
-<CodeBlock lang={'ts'} code={pippStream}></CodeBlock>
+```js
+a.pipe(b).pipe(c).pipe(d)
+```
 
