--- a/src/content/posts/022.md
+++ b/src/content/posts/022.md
@@ -2,13 +2,11 @@
 title: 'React 条件渲染'
 keywords: 'react, jsx, tsx, component'
 description: '在 React 中，条件渲染用于根据不同的条件来渲染不同的组件或元素。条件渲染的方式类似于 JavaScript 中的条件语句，React 提供了多种灵活的条件渲染方法，适用于不同的场景。'
-layout: '../../layouts/MarkdownPostLayout.astro'
 author: 'luludev.cn'
 date: '2024-11-02'
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "React"
 ---
 
 ## React 条件渲染
