--- a/src/content/posts/024.md
+++ b/src/content/posts/024.md
@@ -1,14 +1,12 @@
 ---
 title: React 表单处理
 description: 在 React 中，表单元素（如输入框、选择框等）通常作为受控组件来处理，以便更好地管理用户输入。受控组件通过 React 的 state 管理输入的值，从而实现双向绑定。React 也提供了处理非受控组件的方式，适用于某些特定需求。
-layout: ../../layouts/MarkdownPostLayout.astro
 author: 'luludev.cn'
 keywords: 'react, jsx, tsx, component'
 date: 2024-11-04
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "React"
 ---
 
 ## React 表单处理
