--- a/src/content/posts/033.md
+++ b/src/content/posts/033.md
@@ -1,5 +1,4 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: 'Git的详细安装和使用方法'
 author: 'luludev.cn'
 keywords: 'git, 版本控制，git commit，git push，git pull，git diff，git branch，git merge'
@@ -7,8 +6,7 @@ description: Git 是一个分布式版本控制系统，广泛用于管理软件
 date: 2024-12-08
 coverImage: "/images/file.svg"
 tags:
-  - "Next.js"
-  - "markdown"
+  - "Git"
 ---
 
 
